# PlatformerTest

./: .gitignore  CMakeLists.txt
.res/maps/: 0_0.txt
src/: constants.h  main.cpp
src/game/: game.cpp  game.h  game_input.h  game_item.cpp  game_item.h  game_states.cpp  game_states.h
src/game/manager/: manager.cpp  manager.h  manager_manager.cpp
src/items/cloud/: cloud.cpp  cloud.h  cloud_manager.cpp  cloud_manager.h
src/items/player/: player.cpp  player.h  player_manager.cpp  player_manager.h
src/items/tile/: tile.cpp  tile.h  tile_manager.cpp  tile_manager.h
src/physics/: aabb.cpp  aabb.h  aabb_game_item.cpp  aabb_game_item.h  camera.cpp  camera.h
src/physics/tile_game_item/: tile_game_item.cpp  tile_game_item.h
src/ui/: window.cpp
src/ui/components/: component_manager.cpp  component_manager.h  ui_component.cpp  ui_component.h
src/ui/components/button/: button.cpp  button.h  button_manager.cpp
src/utilities/: texture_manager.cpp  texture_manager.h
